# just-pick-this-ios

./: .gitignore  AGENTS.md  README.md  project.yml
backend/: .env.example  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/issues/: abuse_safety_issue_breakdown_report_20260624.md  abuse_safety_metrics_report_20260624.md  abuse_safety_report_20260623.md  answerer_quality_metrics_report_20260624.md  answerer_quality_report_20260623.md  answerer_quality_reward_eligibility_report_20260624.md  answerer_reputation_report_20260624.md  benchmark_500_product_path_report_20260624.md  card_ask_human_feedback_report_20260624.md  card_feedback_metrics_report_20260624.md  card_feedback_routes_report_20260623.md  cost_latency_budget_report_20260623.md  cost_latency_observability_report_20260624.md  effect_loop_audit_20260608.md  effect_loop_final_report_20260608.md  email_auth_audit_20260615.md  email_auth_implementation_report.md  evaluator_human_agreement_report_20260624.md  evidence_pack_report_20260623.md  evidence_quality_summary_report_20260624.md  experiment_lift_report_20260624.md  experiment_variant_quality_report_20260624.md  experimentation_report_20260623.md  final_recommendation_acceptance_report_20260624.md  final_report.md  finalizer_metrics_report_20260624.md  finalizer_quality_report_20260623.md  harness_final_verification_report.md  help_card_abuse_safety_report_20260624.md  help_card_quality_summary_report_20260624.md  help_deck_audit_20260615.md  (+74 more)
(+333 files in other folders)
