[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "just-pick-this-backend"
version = "0.1.0"
description = "Python backend skeleton for 就选这个 / 皮皮 Agent Runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "app/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
